--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Khushboo Daryani</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h2> sdgdsmfogmdsfogmdfvdbodfmbo</h2>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
